refactor(router): fixed open-api file
