# crates/router/src/routes/app.rs
@@ -226,7 +226,7 @@ impl Customers {
                         .route(web::get().to(list_customer_payment_method_api)),
                 )
                 .service(
-                    web::resource("{customer_id}/payment_methods")
+                    web::resource("/{customer_id}/payment_methods")
                         .route(web::get().to(list_customer_payment_method_api)),
                 )
                 .service(
